<resources>
    <string name="app_name">AR Museum Project</string>
    <string name="add_artwork">Add</string>
    <string name="ar" translatable="false">AR</string>
    <string name="ar_selection">AR Selection</string>
    <string name="artist">Artist</string>
    <string name="back">Back</string>
    <string name="chosen_artwork">Chosen artwork:</string>
    <string name="classification">Classification</string>
    <string name="delete_current">Delete current artwork</string>

    <string name="dep1">American Decorative Arts</string>
    <string name="dep3">Ancient Near Eastern Art</string>
    <string name="dep4">Arms and Armor</string>
    <string name="dep5">Arts of Africa, Oceania, and the Americas</string>
    <string name="dep6">Asian Art</string>
    <string name="dep7">The Cloisters</string>
    <string name="dep8">The Costume Institute</string>
    <string name="dep9">Drawings and Prints</string>
    <string name="dep10">Egyptian Art</string>
    <string name="dep11">European Paintings</string>
    <string name="dep12">European Sculpture and Decorative Arts</string>
    <string name="dep13">Greek and Roman Art</string>
    <string name="dep14">Islamic Art</string>
    <string name="dep15">The Robert Lehman Collection</string>
    <string name="dep16">The Libraries</string>
    <string name="dep17">Medieval Art</string>
    <string name="dep18">Musical Instruments</string>
    <string name="dep19">Photographs</string>
    <string name="dep21">Modern Art</string>

    <string name="department">Department</string>
    <string name="filter">Filter</string>
    <string name="galleryButton">Gallery</string>
    <string name="home">Home</string>
    <string name="home_intro">Please enter the museum or add an artwork of your own to get started!</string>
    <string name="home_recent">Most recently viewed artwork:</string>
    <string name="no_result">No results</string>
    <string name="none">None</string>
    <string name="not_found_text">It is really quiet in here..</string>
    <string name="online_artwork">Museum</string>
    <string name="open_api_service">Open APIService</string>
    <string name="open_selectFromGallery">Open SFG</string>
    <string name="pickImageToast">You have to pick image from gallery before saving it</string>
    <string name="phone_rotation_warning">Please hold your phone upright!</string>
    <string name="reset">Reset</string>
    <string name="result">result</string>
    <string name="results">results</string>
    <string name="save_image">Save image</string>
    <string name="saveButton">Save</string>
    <string name="saved">Image saved</string>
    <string name="search">Search</string>
    <string name="searching">Searching...</string>
    <string name="search_arts">Search art..</string>
    <string name="search_too_short">Search must contain at least 2 characters</string>
    <string name="select_photo">Select photo...</string>
    <string name="start_ar">Start AR</string>
    <string name="title">Title *</string>
    <string name="welcome">Welcome!</string>
</resources>