<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>
        <variable
            name="selectDepartmentViewModel"
            type="com.marsu.armuseumproject.viewmodels.SelectDepartmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/custom_container"
        tools:context=".activities.SelectDepartmentActivity">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioGroup
                android:id="@+id/department_radio_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" >

                <RadioButton
                    android:id="@+id/dep1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dep1" />

                <RadioButton
                    android:id="@+id/dep3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dep3" />

                <RadioButton
                    android:id="@+id/dep4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dep4" />

                <RadioButton
                    android:id="@+id/dep5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dep5" />

                <RadioButton
                    android:id="@+id/dep6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dep6" />

                <RadioButton
                    android:id="@+id/dep7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dep7" />

                <RadioButton
                    android:id="@+id/dep8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dep8" />

                <RadioButton
                    android:id="@+id/dep9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dep9" />

                <RadioButton
                    android:id="@+id/dep10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dep10" />

                <RadioButton
                    android:id="@+id/dep11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dep11" />

                <RadioButton
                    android:id="@+id/dep12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dep12" />

                <RadioButton
                    android:id="@+id/dep13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dep13" />

                <RadioButton
                    android:id="@+id/dep14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dep14" />

                <RadioButton
                    android:id="@+id/dep15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dep15" />

                <RadioButton
                    android:id="@+id/dep16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dep16" />

                <RadioButton
                    android:id="@+id/dep17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dep17" />

                <RadioButton
                    android:id="@+id/dep18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dep18" />

                <RadioButton
                    android:id="@+id/dep19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dep19" />

                <RadioButton
                    android:id="@+id/dep21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dep21" />

            </RadioGroup>

        </ScrollView>



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>