<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ArActivity">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/sceneform_fragment"
            android:name="com.google.ar.sceneform.ux.ArFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/ar_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_gravity="bottom|start"
            android:layout_margin="20dp"/>

        <Button
            android:id="@+id/ar_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="20dp"
            android:text="@string/delete_current" />

        <FrameLayout
            android:id="@+id/ar_gravity_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            android:paddingVertical="50dp"
            android:background="@color/black_with_opacity"
            android:visibility="invisible"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/sapphire_blue"
                android:textSize="24sp"
                android:textAlignment="center"
                android:text="@string/phone_rotation_warning" />
        </FrameLayout>

    </FrameLayout>
</layout>